src/assets/styles/components/_brand.scss
.brand {
  color: inherit;
  height: rem(80);
  margin-left: rem(-3);
  padding-top: rem(12);
  width: rem(72);
  z-index: 20;

  &:hover,
  &:focus {
    background: var(--fl-bgColor, var(--black));
    color: var(--fl-fgColor, var(--white));
  }

  &:active {
    background: transparentize(black, 0.3);
  }
}

.brand svg {
  fill: currentColor;
  margin-left: rem(18);
  width: rem(40);
}

.brand .brand__logo svg {
  display: inline;
  width: rem(40);
}

.brand .brand__logotype svg {
  display: none;
  width: rem(200);
}

.page--home {
  .brand {
    color: var(--fl-fgColor, var(--blue-500));
    width: rem(72);

    &:hover,
    &:focus {
      background: var(--fl-fgColor, var(--blue-500));
      color: var(--fl-bgColor, var(--white));
    }

    &:active {
      background: transparentize($blue-500, 0.3);
    }
  }

  .brand__logo {
    display: inline;
  }

  .brand__logotype {
    display: none;
  }
}

.banner--menu-visible,
.page--home .banner--menu-visible {
  .brand {
    color: var(--fl-fgColor, var(--white));

    &:hover,
    &:focus {
      background: var(--fl-fgColor, var(--white));
      color: var(--fl-bgColor, var(--indigo-800));
    }

    &:active {
      background: var(--fl-fgColor, var(--indigo-900));
      color: var(--fl-bgColor, var(--white));
    }
  }
}

@include breakpoint-up(sm) {
  .brand {
    width: rem(232);
  }

  .brand .brand__logo svg {
    display: none;
  }

  .brand .brand__logotype svg {
    display: inline;
  }
}

